--- a/HelloWorld/Views/RentalRequest/UserRequests.cshtml
+++ b/HelloWorld/Views/RentalRequest/UserRequests.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ClassLibrary.Models.RentalRequest>
+@model List<ClassLibrary.Models.RentalRequest>
 
 @{
     ViewData["Title"] = "Manage User Requests";
